--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     active: ${SPRING_PROFILES_ACTIVE:dev}
   
   datasource:
-    url: ${DATABASE_URL:${DB_URL:jdbc:postgresql://localhost:5432/esports}}
+    url: ${DB_URL:${DATABASE_URL:jdbc:postgresql://localhost:5432/esports}}
     username: ${DB_USER:esports}
     password: ${DB_PASSWORD:secret}
     driver-class-name: org.postgresql.Driver
