fixed cors for cookies

--- a/.env
+++ b/.env
@@ -27,13 +27,8 @@ MIN_PLAYERS=4
 MIN_DURATION_MINUTES=90
 
 # CORS Configuration
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+CORS_ALLOWED_ORIGINS=http://localhost:3000,https://esportlab.run
 
 # Server Configuration
 SERVER_PORT=8080
-COOKIE_
-
-
-
-
-SECURE=false
+COOKIE_SECURE=true
