--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,8 +53,13 @@ server:
 
 app:
   base-url: ${APP_BASE_URL:http://localhost:8080}
+  frontend:
+    url: ${FRONTEND_URL:https://esportlab.run}
   cors:
     allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+  jwt:
+    secret: ${JWT_SECRET:mySecretKey1234567890123456789012345678901234567890}
+    expiration-hours: ${JWT_EXPIRATION_HOURS:24}
   
   discord:
     bot-token: ${DISCORD_BOT_TOKEN:}
