--- a/.env
+++ b/.env
@@ -29,6 +29,11 @@ MIN_DURATION_MINUTES=90
 # CORS Configuration
 CORS_ALLOWED_ORIGINS=http://localhost:3000,https://esportlab.run
 
+# JWT Configuration
+JWT_SECRET=mySecretKey1234567890123456789012345678901234567890
+JWT_EXPIRATION_HOURS=24
+FRONTEND_URL=https://esportlab.run
+
 # Server Configuration
 SERVER_PORT=8080
 COOKIE_SECURE=true
